--- a/MinerMonitorApp/mm_config.json
+++ b/MinerMonitorApp/mm_config.json
@@ -1,7 +1,7 @@
 {
-	"miner host with port_":"http://barbarhome.ddns.net:3333",
-	"miner host with port":"http://localhost/index2.html",
+	"miner host with port":"http://barbarhome.ddns.net:3333",
+	"miner host with port_":"http://localhost/index2.html",
 	"log folder": "..\\web\\logs",
 	"web console checking frequency in sec" : 10
-	
+
 }
