--- a/MinerMonitorApp/mm_config.json
+++ b/MinerMonitorApp/mm_config.json
@@ -2,5 +2,6 @@
 	"miner host with port":"http://barbarhome.ddns.net:3333",
 	"miner host with port_":"http://localhost/index2.html",
 	"log folder": "..\\web\\logs",
+	"log file": "gpuinfos.csv",
 	"web console checking frequency in sec" : 10
 }
